force-app/main/default/objects/R360_Configuration__c/R360_Configuration__c.object-meta.xml
<CustomObject>
    <description>Versioned, effective-dated Resource360 runtime configuration overrides. Secrets are prohibited.</description>
    <label>Resource 360 Configuration</label>
    <nameField><displayFormat>CFG-{00000}</displayFormat><label>Configuration Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Resource 360 Configurations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>