force-app/main/default/objects/R360_Configuration__c/fields/Approved_By__c.field-meta.xml
<CustomField><fullName>Approved_By__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Approved By</label><referenceTo>User</referenceTo><relationshipName>Approved_Resource360_Configurations</relationshipName><type>Lookup</type></CustomField>