force-app/main/default/objects/R360_Configuration__c/fields/Attributes_JSON__c.field-meta.xml
<CustomField><fullName>Attributes_JSON__c</fullName><description>Non-secret behavior attributes such as tower, billability or routing dimensions.</description><label>Attributes JSON</label><length>32768</length><trackHistory>true</trackHistory><type>LongTextArea</type><visibleLines>6</visibleLines></CustomField>