force-app/main/default/objects/R360_Configuration__c/fields/Boolean_Value__c.field-meta.xml
<CustomField><fullName>Boolean_Value__c</fullName><defaultValue>false</defaultValue><label>Boolean Value</label><trackHistory>true</trackHistory><type>Checkbox</type></CustomField>