force-app/main/default/objects/R360_Configuration__c/fields/Change_Reason__c.field-meta.xml
<CustomField><fullName>Change_Reason__c</fullName><label>Change Reason</label><length>4000</length><trackHistory>true</trackHistory><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>