force-app/main/default/objects/R360_Configuration__c/fields/Code__c.field-meta.xml
<CustomField><fullName>Code__c</fullName><caseSensitive>false</caseSensitive><label>Code</label><length>120</length><required>true</required><trackHistory>true</trackHistory><type>Text</type></CustomField>