force-app/main/default/objects/R360_Configuration__c/fields/Configuration_Key__c.field-meta.xml
<CustomField><fullName>Configuration_Key__c</fullName><caseSensitive>false</caseSensitive><label>Configuration Key</label><length>180</length><required>true</required><trackHistory>true</trackHistory><type>Text</type></CustomField>