force-app/main/default/objects/R360_Configuration__c/fields/Current__c.field-meta.xml
<CustomField><fullName>Current__c</fullName><defaultValue>false</defaultValue><label>Current Version</label><trackHistory>true</trackHistory><type>Checkbox</type></CustomField>