force-app/main/default/objects/R360_Configuration__c/fields/Display_Label__c.field-meta.xml
<CustomField><fullName>Display_Label__c</fullName><label>Display Label</label><length>255</length><trackHistory>true</trackHistory><type>Text</type></CustomField>