force-app/main/default/objects/R360_Configuration__c/fields/Domain__c.field-meta.xml
<CustomField><fullName>Domain__c</fullName><label>Domain</label><required>true</required><trackHistory>true</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Policy</fullName><default>true</default><label>Policy</label></value><value><fullName>Delivery Role</fullName><default>false</default><label>Delivery Role</label></value><value><fullName>Classification</fullName><default>false</default><label>Classification</label></value><value><fullName>General LOV</fullName><default>false</default><label>General LOV</label></value><value><fullName>Approval</fullName><default>false</default><label>Approval</label></value><value><fullName>Escalation</fullName><default>false</default><label>Escalation</label></value><value><fullName>Notification</fullName><default>false</default><label>Notification</label></value><value><fullName>Integration</fullName><default>false</default><label>Integration</label></value><value><fullName>KPI</fullName><default>false</default><label>KPI</label></value></valueSetDefinition></valueSet></CustomField>