force-app/main/default/objects/R360_Configuration__c/fields/Effective_To__c.field-meta.xml
<CustomField><fullName>Effective_To__c</fullName><label>Effective To</label><trackHistory>true</trackHistory><type>Date</type></CustomField>