force-app/main/default/objects/R360_Configuration__c/fields/Numeric_Value__c.field-meta.xml
<CustomField><fullName>Numeric_Value__c</fullName><label>Numeric Value</label><precision>18</precision><scale>4</scale><trackHistory>true</trackHistory><type>Number</type></CustomField>