force-app/main/default/objects/R360_Configuration__c/fields/Release_Key__c.field-meta.xml
<CustomField><fullName>Release_Key__c</fullName><caseSensitive>false</caseSensitive><externalId>false</externalId><label>Configuration Release Key</label><length>80</length><required>false</required><trackHistory>true</trackHistory><type>Text</type><unique>false</unique></CustomField>