force-app/main/default/objects/R360_Configuration__c/fields/State__c.field-meta.xml
<CustomField><fullName>State__c</fullName><label>State</label><required>true</required><trackHistory>true</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Draft</fullName><default>true</default><label>Draft</label></value><value><fullName>Pending Approval</fullName><default>false</default><label>Pending Approval</label></value><value><fullName>Active</fullName><default>false</default><label>Active</label></value><value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value><value><fullName>Retired</fullName><default>false</default><label>Retired</label></value></valueSetDefinition></valueSet></CustomField>