force-app/main/default/objects/R360_Configuration__c/fields/Submitted_By__c.field-meta.xml
<CustomField><fullName>Submitted_By__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Submitted By</label><referenceTo>User</referenceTo><relationshipName>Submitted_Resource360_Configurations</relationshipName><type>Lookup</type></CustomField>