force-app/main/default/objects/R360_Configuration__c/fields/Text_Value__c.field-meta.xml
<CustomField><fullName>Text_Value__c</fullName><label>Text Value</label><length>32768</length><trackHistory>true</trackHistory><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>