force-app/main/default/objects/R360_Configuration__c/fields/Unit__c.field-meta.xml
<CustomField><fullName>Unit__c</fullName><label>Unit</label><length>40</length><type>Text</type></CustomField>