force-app/main/default/objects/R360_Configuration__c/fields/Validation_Summary__c.field-meta.xml
<CustomField><fullName>Validation_Summary__c</fullName><label>Validation Summary</label><length>4000</length><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>