force-app/main/default/objects/R360_Configuration__c/fields/Value_Type__c.field-meta.xml
<CustomField><fullName>Value_Type__c</fullName><label>Value Type</label><required>true</required><trackHistory>true</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Number</fullName><default>true</default><label>Number</label></value><value><fullName>Text</fullName><default>false</default><label>Text</label></value><value><fullName>Boolean</fullName><default>false</default><label>Boolean</label></value><value><fullName>JSON</fullName><default>false</default><label>JSON</label></value></valueSetDefinition></valueSet></CustomField>