force-app/main/default/objects/R360_Configuration__c/fields/Version_Key__c.field-meta.xml
<CustomField><fullName>Version_Key__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Version Key</label><length>200</length><required>true</required><type>Text</type><unique>true</unique></CustomField>