force-app/main/default/objects/R360_Configuration__c/validationRules/Configuration_Date_Order.validationRule-meta.xml
<ValidationRule><fullName>Configuration_Date_Order</fullName><active>true</active><errorConditionFormula>AND(NOT(ISBLANK(Effective_To__c)), Effective_To__c &lt; Effective_From__c)</errorConditionFormula><errorMessage>Effective To must be on or after Effective From.</errorMessage></ValidationRule>